[package]
name = "deepviewrt-sys"
description = "Low-level FFI bindings for deepview-rt Library"
authors = ["Au-Zone Technologies"]
readme = "README.md"
license-file = "LICENSE"
license = "AGPL-3.0"
homepage = "https://support.deepviewml.com"
repository = "https://github.com/DeepViewML/deepviewrt-rs"
documentation = "https://docs.rs/deepviewrt"
keywords = ["deepview", "visionpack"]
categories = ["computer-vision", "multimedia::video", "api-bindings"]
version = "0.1.0"
edition = "2021"

[dependencies]
libc = "^0.2"
